# Ideathon-Energisa-Back

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
backend/: main.py
backend/ai/blip2/: infer.py  loader.py  prompt.py
backend/ai/risk/: classifier.py  explain.py  model_factory.py  schema.py  train_runner.py  train_tfidf.py  utils.py  vocab.py
backend/ai/risk/model/: label_map.json
backend/api/: auth.py  auth_admin.py  chamados_controller.py  risk.py  solicitacoes.py  usuarios_controller.py
backend/core/: database.py  risk_core.py  uploads.py
backend/data/: seed.py
backend/events/: register_events.py  user_events.py
backend/models/: admin.py  chamados.py  enderecos.py  fotos.py  funcionarios.py  parceiros.py  return_schemas.py  risk_audit.py  schemas.py  solicitacoes.py  tipo_chamado.py  user.py  usuario.py
backend/tests/: test_blip2_manual.py  test_metrics_risk.py  test_pipeline_ia.py  test_risk_classifier.py
